--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,5 @@
+
+
 name: Deploy to Tencent Cloud
 
 on:
@@ -16,28 +18,34 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
-节点版本: '18'
+        node-version: '18'
     
-    - name: 安装pnpm
-npm install -g pnpm
+    - name: Install pnpm
+      run: npm install -g pnpm
     
-    - name: 安装依赖
-运行: 
+    - name: Install dependencies
+      run: pnpm install
     
-    - name: 构建项目
+    - name: Build project
       run: pnpm run build
     
-    - name: 部署到服务器
+    - name: Deploy to server
       uses: appleboy/scp-action@master
       with:
-$secrets.SERVER_HOST}
-用户名: ${{secrets.SERVER_USER}}
-密码: ${{secrets.SERVER_PASSWORD}
-源: “dist、server、package.json、pnpm-lock.yaml、.env”
-目标: "/home/ubuntu/chu-tea-mini-app-main"
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USER }}
+        password: ${{ secrets.SERVER_PASSWORD }}
+        source: "dist,server,package.json,pnpm-lock.yaml,.env"
+        target: "/home/ubuntu/chu-tea-mini-app-main"
         strip_components: 0
     
-    - 名称: 重启应用
-用途: appleboy/ssh-action@master
+    - name: Restart application
+      uses: appleboy/ssh-action@master
       with:
-主机: ${{密钥
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USER }}
+        password: ${{ secrets.SERVER_PASSWORD }}
+        script: |
+          cd /home/ubuntu/chu-tea-mini-app-main
+          pnpm install --prod
+          pm2 restart chu-tea || pm2 start server/index.js --name chu-tea
