--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,3 @@
-
-
 name: Deploy to Tencent Cloud
 
 on:
@@ -13,12 +11,12 @@ jobs:
     
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     
     - name: Setup Node.js
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
-        node-version: '18'
+        node-version: '22'
     
     - name: Install pnpm
       run: npm install -g pnpm
@@ -28,6 +26,9 @@ jobs:
     
     - name: Build project
       run: pnpm run build
+      env:
+        VITE_ANALYTICS_ENDPOINT: ""
+        VITE_ANALYTICS_WEBSITE_ID: ""
     
     - name: Deploy to server
       uses: appleboy/scp-action@master
@@ -35,9 +36,9 @@ jobs:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         password: ${{ secrets.SERVER_PASSWORD }}
-        source: "dist,server,package.json,pnpm-lock.yaml,.env"
+        source: "dist/*,server/*,package.json,pnpm-lock.yaml"
         target: "/home/ubuntu/chu-tea-mini-app-main"
-        strip_components: 0
+        overwrite: true
     
     - name: Restart application
       uses: appleboy/ssh-action@master
@@ -48,4 +49,5 @@ jobs:
         script: |
           cd /home/ubuntu/chu-tea-mini-app-main
           pnpm install --prod
-          pm2 restart chu-tea || pm2 start server/index.js --name chu-tea
+          pm2 restart chu-tea || pm2 start dist/index.js --name chu-tea
+
