--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,8 +38,7 @@ jobs:
         password: ${{ secrets.SERVER_PASSWORD }}
         script: |
           cd /home/ubuntu/chu-tea-mini-app-main
-          rm -rf dist/public/assets/*
-          rm -f dist/index.js
+          rm -rf dist/
     
     - name: Deploy to server
       uses: appleboy/scp-action@master
@@ -47,8 +46,8 @@ jobs:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         password: ${{ secrets.SERVER_PASSWORD }}
-        source: "dist/*"
-        target: "/home/ubuntu/chu-tea-mini-app-main"
+        source: "dist/"
+        target: "/home/ubuntu/chu-tea-mini-app-main/"
         overwrite: true
         strip_components: 0
     
@@ -62,5 +61,3 @@ jobs:
           cd /home/ubuntu/chu-tea-mini-app-main
           pm2 restart chu-tea || pm2 start dist/index.js --name chu-tea
           echo "Deployment completed at $(date)"
-
-
