--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,63 +1,55 @@
 name: Deploy to Tencent Cloud
-
 on:
   push:
     branches: [ master ]
   workflow_dispatch:
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
         node-version: '22'
-    
     - name: Install pnpm
       run: npm install -g pnpm
-    
     - name: Install dependencies
       run: pnpm install
-    
     - name: Build project
       run: pnpm run build
-      env:
-        VITE_ANALYTICS_ENDPOINT: ""
-        VITE_ANALYTICS_WEBSITE_ID: ""
-    
-    - name: Clean old files on server
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.SERVER_HOST }}
-        username: ${{ secrets.SERVER_USER }}
-        password: ${{ secrets.SERVER_PASSWORD }}
-        script: |
-          cd /home/ubuntu/chu-tea-mini-app-main
-          rm -rf dist/
-    
-    - name: Deploy to server
+    - name: Create deployment package
+      run: tar -czf dist.tar.gz dist/
+    - name: Upload deployment package
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         password: ${{ secrets.SERVER_PASSWORD }}
-        source: "dist/"
-        target: "/home/ubuntu/chu-tea-mini-app-main/"
+        source: "dist.tar.gz"
+        target: "/tmp/"
         overwrite: true
-        strip_components: 0
-    
-    - name: Restart application
+    - name: Blue-Green Deploy
       uses: appleboy/ssh-action@master
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         password: ${{ secrets.SERVER_PASSWORD }}
         script: |
-          cd /home/ubuntu/chu-tea-mini-app-main
-          pm2 restart chu-tea || pm2 start dist/index.js --name chu-tea
-          echo "Deployment completed at $(date)"
+          set -e
+          BASE_DIR="/home/ubuntu/chu-tea-mini-app-main"
+          RELEASES_DIR="${BASE_DIR}/releases"
+          CURRENT_LINK="${BASE_DIR}/current"
+          mkdir -p ${RELEASES_DIR}
+          TIMESTAMP=$(date +%Y%m%d_%H%M%S)
+          NEW_RELEASE_DIR="${RELEASES_DIR}/${TIMESTAMP}"
+          mkdir -p ${NEW_RELEASE_DIR}
+          tar -xzf /tmp/dist.tar.gz -C ${NEW_RELEASE_DIR} --strip-components=1
+          ln -sfn ${NEW_RELEASE_DIR} ${CURRENT_LINK}
+          cd ${BASE_DIR}
+          pm2 restart chu-tea || pm2 start current/dist/index.js --name chu-tea
+          cd ${RELEASES_DIR}
+          ls -t | tail -n +4 | xargs -I {} rm -rf {}
+          rm -f /tmp/dist.tar.gz
+          echo "✅ Deployment successful! Version: ${TIMESTAMP}"
