--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#2563eb",
+  "theme_color": "#2c2c2c",
   "orientation": "portrait-primary",
   "icons": [
     {
